# drifter

./: .gitignore  CONTRACT.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run.sh
cdm/: __init__.py  app.py  claude_code.py  cli.py  config.py  corrective.py  desktop.py  drift.py  embeddings.py  eval.py  goal_state.py  hook.py  llm.py  models.py  monitor.py  sample_transcript.json  smart.py  storage.py  transcript.py  watcher.py
tests/: test_anchor_hygiene.py  test_claude_code.py  test_corrective.py  test_drift.py  test_drift_analytics.py  test_embeddings.py  test_eval.py  test_goal_state.py  test_hook.py  test_llm.py  test_monitor.py  test_smart.py  test_storage.py  test_storage_meta.py  test_transcript.py  test_watcher.py
